--- a/index.html
+++ b/index.html
@@ -342,9 +342,11 @@
   const SHORT_STAGE_TITLE = k => SHORT_STAGE_TITLES[k] || STAGE_TITLE(k);
 
   const numberize = s => {
-    const t = String(s||"").replace(/\u00A0|\u202F/g," ").replace(/[^\d\- ]/g,"").trim();
-    const n = t.replace(/\s+/g,"");
-    return n ? Number(n) : 0;
+    const t = String(s||"").replace(/\u00A0|\u202F/g," ").replace(/[^\d\- ,.%]/g,"").trim();
+    const n = t.replace(/[^\d\-.,]/g,"").replace(/\s+/g,"");
+    if(!n) return 0;
+    const val = Number(n.replace(",", "."));
+    return isNaN(val) ? 0 : val;
   };
   const fmt = n => (typeof n === "number" ? n : Number(n||0)).toLocaleString("ru-RU");
   const normalize = txt => String(txt||"")
@@ -814,7 +816,7 @@
       document.getElementById("briefPlanFactInner").innerHTML = caption + table.outerHTML;
     }catch(e){
       console.warn("Не удалось вставить таблицу Google Sheets:", e);
-      const fallback = `<div class="note">План-Факт: не удалось получить HTML таблицы. <a href="https://docs.google.com/spreadsheets/d/1Y9bM7zLRf_gonMUgfQLl57Iu3NgPa78rBXnpxkKLvO0/edit?usp=drivesdk" target="_blank" rel="noopener">Открыть по ссылке</a></div>`;
+      const fallback = `<div class="note">План-Факт: не удалось получить HTML таблицы. <a href="https://docs.google.com/spreadsheets/d/1Y9bM7zLRf_gonMUgfQLl57Iу3NgPa78rBXnpxkKLvO0/edit?usp=drivesdk" target="_blank" rel="noopener">Открыть по ссылке</a></div>`;
       document.getElementById("presPlanFactInner").innerHTML = fallback;
       document.getElementById("briefPlanFactInner").innerHTML = fallback;
     }
@@ -849,7 +851,7 @@
     document.getElementById("exportStatus").textContent = "PDF выжимки сохранен.";
   }
 
-  /* ==================== Экспорт Word-HTML (добавлен План-Факт) ==================== */
+  /* ==================== Экспорт Word-HTML ==================== */
   function exportWordHTML(){
     if(!DATA) return alert("Сначала проанализируйте отчёты.");
     const {curr, prev, dyn} = DATA;
@@ -916,25 +918,164 @@
     document.getElementById("exportStatus").textContent = "HTML отчет сохранен. Откройте в браузере или Word.";
   }
 
-  /* ==================== Экспорт презентации в HTML (исправлено по пунктам 1–5) ==================== */
+  /* ==================== ВСПОМОГАТЕЛЬНОЕ ДЛЯ СЛАЙДА 1 (донаты по План-Факт) ==================== */
+  function parsePlanFactMetricsFromHTML(pfHTML){
+    const res = { podves:null, revenue:null, hasData:false };
+    if(!pfHTML) return res;
+    const tmp = document.createElement("div");
+    tmp.innerHTML = pfHTML;
+    const table = tmp.querySelector("table");
+    if(!table) return res;
+
+    const rows = Array.from(table.querySelectorAll("tr"));
+    if(!rows.length) return res;
+
+    // Определяем индексы колонок План/Факт (если есть в заголовке)
+    let colPlan = -1, colFact = -1;
+    const headCells = Array.from(rows[0].querySelectorAll("th,td")).map(c=>c.textContent.trim().toLowerCase());
+    headCells.forEach((t,i)=>{
+      if(colPlan===-1 && /план/.test(t)) colPlan = i;
+      if(colFact===-1 && /факт/.test(t)) colFact = i;
+    });
+
+    function pickNumbers(cells){
+      const nums = [];
+      for(const c of cells){
+        const txt = c.textContent.replace(/\u00A0|\u202F/g,' ').trim();
+        const matches = txt.match(/-?\d{1,3}(?:[\s\u00A0\u202F]?\d{3})*(?:[.,]\d+)?%?/g);
+        if(matches){
+          for(const m of matches){
+            const isPct = /%/.test(m);
+            const val = Number(m.replace('%','').replace(/\s/g,'').replace(',','.'));
+            if(!isNaN(val)) nums.push({val, isPct});
+          }
+        }
+      }
+      return nums;
+    }
+
+    function rowToPlanFact(row){
+      const cells = Array.from(row.querySelectorAll("td,th"));
+      let plan=null, fact=null, planPct=false, factPct=false;
+      if(colPlan>=0 && colPlan<cells.length) {
+        const m = pickNumbers([cells[colPlan]])[0];
+        if(m){ plan = m.val; planPct = !!m.isPct; }
+      }
+      if(colFact>=0 && colFact<cells.length) {
+        const m = pickNumbers([cells[colFact]])[0];
+        if(m){ fact = m.val; factPct = !!m.isPct; }
+      }
+      if(plan===null || fact===null){
+        const nums = pickNumbers(cells);
+        if(nums.length>=2){
+          if(plan===null){ plan = nums[0].val; planPct = !!nums[0].isPct; }
+          if(fact===null){ fact = nums[1].val; factPct = !!nums[1].isPct; }
+        }
+      }
+      if(plan===null || fact===null) return null;
+      return {plan, fact, planPct, factPct};
+    }
+
+    function findByKeys(keys){
+      const re = new RegExp(keys.join("|"), "i");
+      for(const r of rows){
+        const txt = r.textContent || "";
+        if(re.test(txt)) return rowToPlanFact(r);
+      }
+      return null;
+    }
+
+    const podves = findByKeys(["доля\\s*подвеса","подвес"]);
+    const revenue = findByKeys(["выручк"]);
+
+    if(podves){ res.podves = podves; res.hasData = true; }
+    if(revenue){ res.revenue = revenue; res.hasData = true; }
+
+    return res;
+  }
+
+  function donutImage(percent, centerText, subText){
+    const size = 220, cx=size/2, cy=size/2, r=85, thickness=18;
+    const canvas = document.createElement("canvas");
+    canvas.width = size; canvas.height = size;
+    const ctx = canvas.getContext("2d");
+
+    ctx.fillStyle = "#ffffff";
+    ctx.fillRect(0,0,size,size);
+
+    ctx.beginPath();
+    ctx.arc(cx, cy, r, 0, Math.PI*2);
+    ctx.strokeStyle = "#e6edf6";
+    ctx.lineWidth = thickness;
+    ctx.stroke();
+
+    const ang = Math.max(0, Math.min(100, percent)) / 100 * Math.PI*2;
+    ctx.beginPath();
+    ctx.arc(cx, cy, r, -Math.PI/2, -Math.PI/2 + анг, false);
+    ctx.strokeStyle = varGet("--rs-blue") || "#0033A0";
+    ctx.lineCap = "round";
+    ctx.lineWidth = thickness;
+    ctx.stroke();
+
+    ctx.fillStyle = "#0b1a2b";
+    ctx.font = "700 28px Inter,Arial";
+    ctx.textAlign = "center";
+    ctx.textBaseline = "middle";
+    ctx.fillText(`${Math.round(percent)}%`, cx, cy-6);
+
+    ctx.fillStyle = "#5f6b7a";
+    ctx.font = "12px Inter,Arial";
+    ctx.fillText(centerText, cx, cy+18);
+
+    ctx.font = "11px Inter,Arial";
+    ctx.fillText(subText, cx, cy+36);
+
+    return canvas.toDataURL("image/png");
+  }
+
+  function donutPlaceholder(label){
+    const size=220, canvas=document.createElement("canvas");
+    canvas.width=size; canvas.height=size;
+    const ctx=canvas.getContext("2d");
+    ctx.fillStyle="#fff"; ctx.fillRect(0,0,size,size);
+    ctx.fillStyle="#e6edf6";
+    ctx.beginPath(); ctx.arc(size/2,size/2,85,0,Math.PI*2); ctx.lineWidth=18; ctx.stroke();
+    ctx.fillStyle="#5f6b7a"; ctx.textAlign="center";
+    ctx.font="700 18px Inter,Arial"; ctx.fillText("нет данных", size/2, size/2-6);
+    ctx.font="12px Inter,Arial"; ctx.fillText(label, size/2, size/2+18);
+    return canvas.toDataURL("image/png");
+  }
+
+  /* ==================== Экспорт презентации в HTML (только презентация) ==================== */
   function exportPresHTML(){
     if(!DATA) return alert("Сначала проанализируйте отчёты.");
-    const {curr, prev} = DATA;
+    const {curr, prev, dyn} = DATA;
 
-    // Снимки графиков
     const imgS2 = document.getElementById("chartBranches").toDataURL("image/png", 1.0);
     const imgS3 = document.getElementById("chartBranchesS3").toDataURL("image/png", 1.0);
     const imgS4 = document.getElementById("chartBranchesS4").toDataURL("image/png", 1.0);
-    // Δ РТК слайд полностью убираем из презентации (п.3), поэтому изображение не нужно
 
-    // Блоки из печатной презентации
-    const planfactHTML = document.getElementById("presPlanFactInner").innerHTML;
-    const kpisHTML = document.getElementById("presKpis").innerHTML;
-    const tblS2HTML = document.getElementById("presTable").innerHTML;
-    const tblS3HTML = document.getElementById("presTableS3").innerHTML;
-    const tblS4HTML = document.getElementById("presTableS4").innerHTML;
-    const stagesHTML = document.getElementById("presStages").innerHTML;
-    // Инсайты/Топ – удалены (п.5 и п.6)
+    const planfactHTML = document.getElementById("presPlanFactInner").innerHTML || "";
+
+    // Сортировка для презентации (А→Я, ru)
+    const collator = new Intl.Collator("ru", {sensitivity:"base"});
+    const sortByBranch = (a,b)=>collator.compare(a.b, b.b);
+
+    const s2Sorted = [...dyn.branchRows].sort(sortByBranch);
+    const s3Sorted = [...(dyn.branchRowsS3||[])].sort(sortByBranch);
+    const s4Sorted = [...(dyn.branchRowsS4||[])].sort(sortByBranch);
+
+    const tblS2HTML_sorted = presTableHTML("Динамика по филиалам (всего)", s2Sorted, ["sumPrev","sumCurr","sumDelta"]);
+    const tblS3HTML_sorted = presTableHTML("Динамика по Приказу №425", s3Sorted, ["sumPrevS3","sumCurrS3","sumDeltaS3"]);
+    const tblS4HTML_sorted = presTableHTML("Динамика по ПАО «Ростелеком»", s4Sorted, ["sumPrevS4","sumCurrS4","sumDeltaS4"]);
+
+    const s2BranchStagesSorted = [...dyn.s2BranchStages].sort((a,b)=>collator.compare(a.b,b.b));
+    const stagesHTML_sorted = stageMatrixHTML("Динамика по статусам (Δ)", s2BranchStagesSorted) + stageTotalsHTML("Итоги по статусам", dyn.stagesS2);
+
+    const eff = (curr.p1.totals.legalized + curr.p1.totals.dismantled_ytd) - (prev.p1.totals.legalized + prev.p1.totals.dismantled_ytd);
+    const rtkShare = curr.p1.totals.in_work_total ? (curr.p1.totals.rtk_in_work / curr.p1.totals.in_work_total * 100) : 0;
+    const sign = v=> v>0?"+":"";
+    const compactKPIs = `Ключевые показатели: В работе всего — ${fmt(curr.p1.totals.in_work_total)} (${sign(dyn.in_work_total)}${fmt(dyn.in_work_total)}); Выявлено — ${fmt(dyn.found_week)}; Закрыто — ${fmt(eff)}; РТК — ${fmt(curr.p1.totals.rtk_in_work)} (${sign(dyn.rtk_in_work)}${fmt(dyn.rtk_in_work)}, ${rtkShare.toFixed(1)}%).`;
 
     const presHTML = `<!DOCTYPE html>
 <html>
@@ -952,63 +1093,65 @@
     .muted{color:#5f6b7a}
     .grid2{display:grid;grid-template-columns:1fr 1fr;gap:16px}
     .panel{border:1px solid #e6edf6;border-radius:12px;padding:12px}
-    .imgbox{border:1px solid #e6edf6;border-radius:12px;padding:8px;background:#fafcff}
+    .imgbox{border:1px solid #e6edf6;border-radius:12px;padding:8px;background:#fafcff;text-align:center}
     table{width:100%;border-collapse:collapse;font-size:12px}
     th,td{border:1px solid #e6edf6;padding:8px;text-align:center !important}
     th:first-child, td:first-child{ text-align:left !important }
     th{background:#0033A0;color:#fff;font-weight:700}
     tfoot td{font-weight:800;background:#f7f9fc}
     .legend{font-size:12px;color:#5f6b7a}
+    .subline{font-size:16px;color:#5f6b7a;margin:-6px 0 10px}
     .slide-no{position:absolute;bottom:22px;right:26px;color:#94a3b8;font-weight:700}
   </style>
 </head>
 <body>
 
-  <!-- Слайд 1: Титул + KPI + План-Факт (п.1) -->
+  <!-- Слайд 1: Только заголовок и План-Факт (без графиков), убран дубликат "План-Факт" -->
   <div class="slide">
-    <h1>АО «Россети Кубань» — ВОЛС</h1>
-    <div class="muted" style="font-size:18px;margin-bottom:12px">Еженедельная динамика · Период: ${prev.date} — ${curr.date}</div>
-    <div class="grid2">
-      <div class="panel"><h3 style="margin:0 0 8px 0">Ключевые показатели</h3>${kpisHTML}</div>
-      <div class="panel"><h3 style="margin:0 0 8px 0">План-Факт</h3>${planfactHTML}</div>
+    <h1>Выполнение плановых показателей БП по размещению ВОЛС на ВЛ</h1>
+    <div class="panel">
+      ${planfactHTML}
     </div>
     <div class="slide-no">1</div>
   </div>
 
-  <!-- Слайд 2: Динамика по филиалам (всего) (п.2 — без «Стр.») -->
+  <!-- Слайд 2 -->
   <div class="slide">
-    <h2>Динамика по филиалам (всего)</h2>
+    <h2>Динамика выявления бездоговорного размещения ВОЛС в разрезе филиалов ЭС (итого):</h2>
     <div class="grid2">
       <div class="imgbox"><img src="${imgS2}" alt="График по филиалам (всего)" style="width:100%;height:auto"/></div>
-      <div class="panel">${tblS2HTML}</div>
+      <div class="panel">${tblS2HTML_sorted}</div>
     </div>
+    <div class="legend" style="margin-top:10px;font-size:18px;font-weight:800">${compactKPIs}</div>
     <div class="slide-no">2</div>
   </div>
 
-  <!-- Слайд 3: Приказ №425 -->
+  <!-- Слайд 3 -->
   <div class="slide">
-    <h2>Динамика по Приказу №425</h2>
+    <h2>В том числе: динамика по Приказу №425</h2>
+    <div class="subline">В том числе: динамика по Приказу №425</div>
     <div class="grid2">
       <div class="imgbox"><img src="${imgS3}" alt="График по Приказу 425" style="width:100%;height:auto"/></div>
-      <div class="panel">${tblS3HTML}</div>
+      <div class="panel">${tblS3HTML_sorted}</div>
     </div>
     <div class="slide-no">3</div>
   </div>
 
-  <!-- Слайд 4: ПАО «Ростелеком» -->
+  <!-- Слайд 4 -->
   <div class="slide">
-    <h2>Динамика по ПАО «Ростелеком»</h2>
+    <h2>В том числе: динамика по ПАО «Ростелеком»</h2>
+    <div class="subline">В том числе: динамика по ПАО «Ростелеком»</div>
     <div class="grid2">
       <div class="imgbox"><img src="${imgS4}" alt="График по ПАО Ростелеком" style="width:100%;height:auto"/></div>
-      <div class="panel">${tblS4HTML}</div>
+      <div class="panel">${tblS4HTML_sorted}</div>
     </div>
     <div class="slide-no">4</div>
   </div>
 
-  <!-- Слайд 5: Динамика по статусам -->
+  <!-- Слайд 5 -->
   <div class="slide">
     <h2>Динамика по статусам</h2>
-    <div class="panel">${stagesHTML}</div>
+    <div class="panel">${stagesHTML_sorted}</div>
     <div class="slide-no">5</div>
   </div>
 
@@ -1017,7 +1160,7 @@
 
     const blob = new Blob([presHTML], {type: 'text/html; charset=utf-8'});
     triggerDownload(blob, `Презентация_ВОЛС_${curr.date.replace(/\./g,'-')}.html`);
-    document.getElementById("exportStatus").textContent = "HTML презентация сохранена (объединён титул+KPI+План-Факт; без «Стр.», без Δ РТК и без Топ).";
+    document.getElementById("exportStatus").textContent = "HTML презентация сохранена.";
   }
 
   /* ==================== Вспомогательные ==================== */
